Fixed left image overlap on smaller screen

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -135,6 +135,10 @@ article.body {
       display: block;
       margin: 0 auto;
     }
+
+    img.left {
+      max-width: 100%;
+    }
   }
 
   section.publications {
